--- a/index.html
+++ b/index.html
@@ -370,6 +370,9 @@
         setInterval(moveToNextSlide, 3000);
     </script>
     <!-- Pricing End -->
+
+
+
     <!-- TEAMS SECTION -->
     <div class="container-fluid py-5">
         <div class="container pt-5">
@@ -493,7 +496,7 @@
             </div>
         </div>
     </div>  -->
-    <div class="testimonial-section py-5">
+    <!-- <div class="testimonial-section py-5">
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-6 pb-5 pb-lg-0">
@@ -541,15 +544,15 @@
                                 </div>
                                 <p class="testimonial-text m-0">Aliquyam sed elitr elitr erat sed diam ipsum eirmod eos lorem nonumy. Tempor sea ipsum diam sed clita dolore eos dolores magna erat dolore sed stet justo et dolor.</p>
                             </div>
-                        </div>
-                        <!-- Add navigation buttons -->
-                        <button class="carousel-prev" onclick="moveSlide(-1)">&#10094;</button>
+                        </div> -->
+    <!-- Add navigation buttons -->
+    <!-- <button class="carousel-prev" onclick="moveSlide(-1)">&#10094;</button>
                         <button class="carousel-next" onclick="moveSlide(1)">&#10095;</button>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- Internal JavaScript -->
     <script>
@@ -590,7 +593,7 @@
     </script>
 
     <!-- Optional CSS for better styling -->
-    <style>
+    <!-- <style>
         .carousel-container {
             position: relative;
         }
@@ -644,7 +647,7 @@
         .carousel-next:hover {
             background-color: rgba(0, 0, 0, 0.8);
         }
-    </style>
+    </style> -->
 
     <!-- Testimonial End -->
 
@@ -708,23 +711,6 @@
             </div>
         </div>
     </div>
-    <!-- Footer End -->
-
-
-    <!-- Back to Top -->
-    <!-- <a href="#" class="btn btn-lg btn-danger back-to-top">
-    <i class="fa fa-angle-double-up"></i>
-    </a>
-
-    <script>
-        // Scroll to top when the button is clicked
-        document.querySelector('.back-to-top').addEventListener('click', function(e) {
-        e.preventDefault();
-        window.scrollTo({ top: 0, behavior: 'smooth' });
-        });
-    </script>
-     -->
-
 
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
