--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                         <img class="img-fluid" src="images/team-1.jpeg" alt="">
                         <div class="position-relative text-center">
                             <div class="team-text bg-primary text-white">
-                                <h5 class="text-white text-uppercase">Olivia Mia</h5>
+                                <h5 class="text-white text-uppercase">Olivia</h5>
                                 <p class="m-0">Massage & Alignment Expert</p>
                             </div>
                             <div class="team-social bg-dark text-center">
@@ -399,10 +399,10 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="team position-relative overflow-hidden mb-5">
-                        <img class="img-fluid" src="images/team-1.jpeg" alt="">
+                        <img class="img-fluid" src="images/WhatsApp Image 2024-11-15 at 02.55.17.jpeg" alt="">
                         <div class="position-relative text-center">
                             <div class="team-text bg-primary text-white">
-                                <h5 class="text-white text-uppercase">Cory Brown</h5>
+                                <h5 class="text-white text-uppercase">High Bee</h5>
                                 <p class="m-0">Massage & Alignment Expert</p>
                             </div>
                             <div class="team-social bg-dark text-center">
@@ -413,10 +413,10 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="team position-relative overflow-hidden mb-5">
-                        <img class="img-fluid" src="images/team-1.jpeg" alt="">
+                        <img class="img-fluid" src="images/last worker.jpg" alt="">
                         <div class="position-relative text-center">
                             <div class="team-text bg-primary text-white">
-                                <h5 class="text-white text-uppercase">Elizabeth Ross</h5>
+                                <h5 class="text-white text-uppercase">David</h5>
                                 <p class="m-0">Massage & Alignment Expert</p>
                             </div>
                             <div class="team-social bg-dark text-center">
@@ -585,7 +585,7 @@
             // Initialize the first slide
             showSlide(currentIndex);
 
-            // Optional: Auto-slide (if needed)
+
             setInterval(function() {
                 moveSlide(1); // Automatically move to next slide every 5 seconds
             }, 5000);
