--- a/index.html
+++ b/index.html
@@ -274,30 +274,27 @@
                                     <div class="bg-white slide">
                                         <div class="d-flex align-items-center justify-content-between border-bottom border-primary p-4">
                                             <h1 class="display-4 mb-0">
-                                                <small class="align-top text-muted font-weight-medium" style="font-size: 22px; line-height: 45px;">N</small>49<small class="align-bottom text-muted font-weight-medium" style="font-size: 16px; line-height: 40px;">/Mo</small>
+                                                <small class="align-top text-muted font-weight-medium" style="font-size: 22px; line-height: 45px;">N</small>49,000<small class="align-bottom text-muted font-weight-medium" style="font-size: 16px; line-height: 40px;"></small>
                                             </h1>
                                             <h5 class="text-primary text-uppercase m-0">Basic Plan</h5>
                                         </div>
                                         <div class="p-4">
                                             <p><i class="fa fa-check text-success mr-2"></i>Full Body Massage</p>
                                             <p><i class="fa fa-check text-success mr-2"></i>Deep Tissue Massage</p>
-                                            <p><i class="fa fa-check text-success mr-2"></i>Hot Stone Massage</p>
-                                            <p><i class="fa fa-check text-success mr-2"></i>Body Alignment</p>
-                                            <p><i class="fa fa-check text-success mr-2"></i>Ice Baths</p>
+
                                             <a href="http://wa.me/+2349054366909" class="btn btn-primary my-2">Book Now</a>
                                         </div>
                                     </div>
                                     <div class="bg-white slide">
                                         <div class="d-flex align-items-center justify-content-between border-bottom border-primary p-4">
                                             <h1 class="display-4 mb-0">
-                                                <small class="align-top text-muted font-weight-medium" style="font-size: 22px; line-height: 45px;">N</small>99<small class="align-bottom text-muted font-weight-medium" style="font-size: 16px; line-height: 40px;">/Mo</small>
+                                                <small class="align-top text-muted font-weight-medium" style="font-size: 22px; line-height: 45px;">N</small>200,000<small class="align-bottom text-muted font-weight-medium" style="font-size: 16px; line-height: 40px;"></small>
                                             </h1>
                                             <h5 class="text-primary text-uppercase m-0">Family Plan</h5>
                                         </div>
                                         <div class="p-4">
                                             <p><i class="fa fa-check text-success mr-2"></i>Full Body Massage</p>
                                             <p><i class="fa fa-check text-success mr-2"></i>Deep Tissue Massage</p>
-                                            <p><i class="fa fa-check text-success mr-2"></i>Sweedish Massage</p>
                                             <p><i class="fa fa-check text-success mr-2"></i>Body Alignment</p>
                                             <p><i class="fa fa-check text-success mr-2"></i>Ice Baths</p>
                                             <a href="http://wa.me/+2349054366909" class="btn btn-primary my-2">Book Now</a>
@@ -306,7 +303,7 @@
                                     <div class="bg-white slide">
                                         <div class="d-flex align-items-center justify-content-between border-bottom border-primary p-4">
                                             <h1 class="display-4 mb-0">
-                                                <small class="align-top text-muted font-weight-medium" style="font-size: 22px; line-height: 45px;">N</small>149<small class="align-bottom text-muted font-weight-medium" style="font-size: 16px; line-height: 40px;">/Mo</small>
+                                                <small class="align-top text-muted font-weight-medium" style="font-size: 22px; line-height: 45px;">N</small>300,000<small class="align-bottom text-muted font-weight-medium" style="font-size: 16px; line-height: 40px;"></small>
                                             </h1>
                                             <h5 class="text-primary text-uppercase m-0">VIP Plan</h5>
                                         </div>
