--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="row py-2 px-lg-5">
             <div class="col-lg-6 text-left mb-2 mb-lg-0">
                 <div class="d-inline-flex align-items-center">
-                    <small><i class="fa fa-phone-alt mr-2"></i><a href="tel:+09054366909">09054366909</a></small>
+                    <small><i class="fa fa-phone-alt mr-2"></i><a href="tel:+08115828845">08115828845</a></small>
                     <small class="px-3">|</small>
                     <small><i class="fa fa-envelope mr-2"></i><a href="mailto:Massagealchemy331@gmail.com">Massagealchemy331@gmail.com</a></small>
 
@@ -117,8 +117,8 @@
                     <img class="massage1" src="images/massage1.jpeg" alt="" srcset="">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
-                            <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Massage & Alignment Center</h6>
-                            <h3 class="display-3 text-capitalize text-white mb-3">Massage Treatment</h3>
+                            <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Physiotherapy & Alignment Center</h6>
+                            <h3 class="display-3 text-capitalize text-white mb-3">Body Treatment</h3>
                             <p class="mx-md-5 px-5 ">Relax, Rejuvenate, Renew Experience the Art of Healing</p>
                             <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="http://wa.me/+2349054366909">Make Appointment</a>
                         </div>
@@ -128,7 +128,7 @@
                     <img class="massage1" src="images/massage 2.jpeg" alt="" srcset="">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
-                            <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Massage & Alignment center</h6>
+                            <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Physiotherapy & Alignment center</h6>
                             <h3 class="display-3 text-capitalize text-white mb-3">Body Alignment</h3>
                             <p class="mx-md-5 px-5">Restore Balance, Move Freely Expert body alignment for better posture, less pain, and more vitality</p>
                             <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="http://wa.me/+2349054366909">Make Appointment</a>
@@ -139,7 +139,7 @@
                     <img class="massage1" src="images/WhatsApp Image 2024-11-15 at 02.54.56 (1).jpeg" alt="" srcset="">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
-                            <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Massage & Alignment Center</h6>
+                            <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Physiotherapy & Alignment Center</h6>
                             <h3 class="display-3 text-capitalize text-white mb-3"> Deep Tissue Treatment</h3>
                             <p class="mx-md-5 px-5">Release Tension, Restore Strength Deep tissue therapy that targets the tough spots for lasting relief and rejuvenation.</p>
                             <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="http://wa.me/+2349054366909">Make Appointment</a>
@@ -164,7 +164,7 @@
                 </div>
                 <div class="col-lg-6">
                     <h6 class="d-inline-block text-primary text-uppercase bg-light py-1 px-2">About Us</h6>
-                    <h1 class="mb-4">Your Best Massage & Body Alignment Care Center</h1>
+                    <h1 class="mb-4">Your Best Physiotherapy & Body Alignment Care Center</h1>
                     <p class="pl-4 border-left border-primary">At Massage Alchemy, we’re all about helping you feel better—mind, body, and soul. Life can get pretty hectic, and sometimes we all need a little time to recharge. That’s where we come in. Our team of skilled massage therapists blends
                         time-tested techniques with a personal touch to create an experience that’s tailored just for you. Whether you're here to unwind, ease muscle tension, or just escape for a while, we’re here to help you find that perfect balance
                         of relaxation and relief. Think of us as your sanctuary where stress melts away and you leave feeling refreshed, rejuvenated, and ready to take on the world. Come experience the magic of Massage Alchemy because you deserve to feel
@@ -200,7 +200,7 @@
         <div class="main-carousel" data-flickity='{ "cellAlign": "left", "contain": true }'>
             <div class="carousel-cell">
                 <img src="images/massage1.jpeg">
-                <a href="http://wa.me/+2349155232621">Body Massage</a>
+                <a href="http://wa.me/+2349155232621">Manual Therapy</a>
             </div>
 
             <div class="carousel-cell">
@@ -221,8 +221,8 @@
 
             </div>
             <div class="carousel-cell">
-                <img src="images/image taken.jpg">
-                <a href="http://wa.me/+2349155232621">swedish Massage</a>
+                <img src="images/injuary eval !.jpg">
+                <a href="http://wa.me/+2349155232621">Injury Evaluation</a>
 
             </div>
         </div>
@@ -241,8 +241,9 @@
                 <div class="col-lg-6 pt-5 pb-lg-5">
                     <div class="hours-text bg-light p-4 p-lg-5 my-lg-5">
                         <h6 class="d-inline-block text-white text-uppercase bg-primary py-1 px-2">Open Hours</h6>
-                        <h1 class="mb-4">Best Massage And Alignment Zone</h1>
-                        <p>Dolores lorem lorem ipsum sit et ipsum. Sadip sea amet diam dolore sed et. Sit rebum labore sit sit ut vero no sit. Et elitr stet dolor sed sit et sed ipsum et kasd ut. Erat duo eos et erat sed diam duo</p>
+                        <h1 class="mb-4">Best Physiotherapy And Alignment Zone</h1>
+                        <p>we specialize in restoring balance, strength, and movement. Our approach blends expert physiotherapy, advanced body alignment techniques, and personalized care to help you move pain-free and perform at your best. Whether you’re
+                            recovering from injury, correcting posture, or simply seeking better body harmony we guide you toward lasting results through mindful, hands-on therapy and evidence-based treatment.</p>
                         <ul class="list-inline">
                             <li class="h6 py-1"><i class="far fa-circle text-primary mr-3"></i>Mon – Fri : 9:00 AM - 11:00 PM</li>
                             <li class="h6 py-1"><i class="far fa-circle text-primary mr-3"></i>Saturday : 9:00 AM - 11:00 PM</li>
@@ -376,7 +377,7 @@
             <div class="row justify-content-center text-center">
                 <div class="col-lg-6">
                     <h6 class="d-inline-block bg-light text-primary text-uppercase py-1 px-2">Massage Specialists</h6>
-                    <h1 class="mb-5">Massage & Alignment Specialist</h1>
+                    <h1 class="mb-5">Physiotherapy & Alignment Specialist</h1>
                 </div>
             </div>
             <div class="row">
@@ -385,11 +386,11 @@
                         <img class="img-fluid" src="images/team-1.jpeg" alt="">
                         <div class="position-relative text-center">
                             <div class="team-text bg-primary text-white">
-                                <h5 class="text-white text-uppercase">Olivia</h5>
+                                <h5 class="text-white text-uppercase">Oyin</h5>
                                 <p class="m-0">Massage & Alignment Expert</p>
                             </div>
                             <div class="team-social bg-dark text-center">
-                                <a class="btn btn-outline-primary btn-square" href="#"><i class="fab fa-instagram"></i></a>
+                                <a class="btn btn-outline-primary btn-square" href="https://www.instagram.com/massagealchemy_?igsh=aTYxb3dua2RscHgx&utm_source=qr"><i class="fab fa-instagram"></i></a>
                             </div>
                         </div>
                     </div>
@@ -399,11 +400,11 @@
                         <img class="img-fluid" src="images/WhatsApp Image 2024-11-15 at 02.55.17.jpeg" alt="">
                         <div class="position-relative text-center">
                             <div class="team-text bg-primary text-white">
-                                <h5 class="text-white text-uppercase">High Bee</h5>
-                                <p class="m-0">Massage & Alignment Expert</p>
+                                <h5 class="text-white text-uppercase">Ibrahim Yakub</h5>
+                                <p class="m-0">Founder</p>
                             </div>
                             <div class="team-social bg-dark text-center">
-                                <a class="btn btn-outline-primary btn-square" href="#"><i class="fab fa-instagram"></i></a>
+                                <a class="btn btn-outline-primary btn-square" href="https://www.instagram.com/massagealchemy_?igsh=aTYxb3dua2RscHgx&utm_source=qr"><i class="fab fa-instagram"></i></a>
                             </div>
                         </div>
                     </div>
@@ -417,7 +418,7 @@
                                 <p class="m-0">Massage & Alignment Expert</p>
                             </div>
                             <div class="team-social bg-dark text-center">
-                                <a class="btn btn-outline-primary btn-square" href="#"><i class="fab fa-instagram"></i></a>
+                                <a class="btn btn-outline-primary btn-square" href="https://www.instagram.com/massagealchemy_?igsh=aTYxb3dua2RscHgx&utm_source=qr"><i class="fab fa-instagram"></i></a>
                             </div>
                         </div>
                     </div>
@@ -427,11 +428,11 @@
                         <img class="img-fluid" src="images/team-3.jpeg" alt="">
                         <div class="position-relative text-center">
                             <div class="team-text bg-primary text-white">
-                                <h5 class="text-white text-uppercase">Kelly Walke</h5>
-                                <p class="m-0">Massage & Alignment Expert</p>
+                                <h5 class="text-white text-uppercase">Ayomide</h5>
+                                <p class="m-0">Physiotherapy Consultation</p>
                             </div>
                             <div class="team-social bg-dark text-center">
-                                <a class="btn btn-outline-primary btn-square" href="#"><i class="fab fa-instagram"></i></a>
+                                <a class="btn btn-outline-primary btn-square" href="https://www.instagram.com/massagealchemy_?igsh=aTYxb3dua2RscHgx&utm_source=qr"><i class="fab fa-instagram"></i></a>
                             </div>
                         </div>
                     </div>
@@ -655,16 +656,16 @@
             <div class="row">
                 <div class="col-lg-6 pr-lg-5 mb-5">
                     <a href="index.html" class="navbar-brand">
-                        <h1 class="mb-3 text-white"><span class="text-primary">MASSAGE</span> Center</h1>
+                        <h1 class="mb-3 text-white"><span class="text-primary">Alignment</span> Center</h1>
                     </a>
-                    <p class="text-uppercase">we are located at tipper garage tanke ilorin.</p>
+                    <p class="text-uppercase">Ilorin / Lagos.</p>
 
 
-                    <p><i class="fa fa-map-marker-alt mr-2"></i>Tpper Garage,Tanke,Ilorin</p>
-                    <p><i class="fa fa-phone-alt mr-2"></i>09054366909</p>
+                    <p><i class="fa fa-map-marker-alt mr-2"></i>Ilorin /Lagos</p>
+                    <p><i class="fa fa-phone-alt mr-2"></i>08115828845</p>
                     <p><i class="fa fa-envelope mr-2"></i><a href="mailto:Massagealchemy331@gmail.com">Send Email</a></p>
                     <div class="d-flex justify-content-start mt-4">
-                        <a class="btn btn-lg btn-primary btn-lg-square" href="#"><i class="fab fa-instagram"></i></a>
+                        <a class="btn btn-lg btn-primary btn-lg-square" href="https://www.instagram.com/massagealchemy_?igsh=aTYxb3dua2RscHgx&utm_source=qr"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-6 pl-lg-5">
@@ -676,15 +677,15 @@
                                 <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>About Us</a>
                                 <a class="text-white-50 mb-2" href="#gallery-id"><i class="fa fa-angle-right mr-2"></i>Our Services</a>
                                 <a class="text-white-50 mb-2" href="#price"><i class="fa fa-angle-right mr-2"></i>Pricing Plan</a>
-                                <a class="text-white-50" href="#"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
+                                <a class="text-white-50" href="https://www.instagram.com/massagealchemy_?igsh=aTYxb3dua2RscHgx&utm_source=qr"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
                             </div>
                         </div>
                         <div class="col-sm-6 mb-5">
                             <h5 class="text-white text-uppercase mb-4">Our Services</h5>
                             <div class="d-flex flex-column justify-content-start">
-                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Body Massage</a>
+                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Manual Therapy</a>
                                 <a class="text-white-50 mb-2" href=""><i class="fa fa-angle-right mr-2"></i>Body Alignment</a>
-                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Swedish Massage</a>
+                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Movement Therapy</a>
                                 <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Body Work</a>
                                 <!-- <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Body Work</a> -->
 
