--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
         <div class="container pt-5">
             <div class="row justify-content-center text-center">
                 <div class="col-lg-6">
-                    <h6 class="d-inline-block bg-light text-primary text-uppercase py-1 px-2">Massage Specialists</h6>
+                    <h6 class="d-inline-block bg-light text-primary text-uppercase py-1 px-2">Our Specialists</h6>
                     <h1 class="mb-5">Physiotherapy & Alignment Specialist</h1>
                 </div>
             </div>
@@ -397,11 +397,11 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="team position-relative overflow-hidden mb-5">
-                        <img class="img-fluid" src="images/WhatsApp Image 2024-11-15 at 02.55.17.jpeg" alt="">
+                        <img class="img-fluid" src="images/high bee.jpg" alt="">
                         <div class="position-relative text-center">
                             <div class="team-text bg-primary text-white">
                                 <h5 class="text-white text-uppercase">Ibrahim Yakub</h5>
-                                <p class="m-0">Founder</p>
+                                <p class="m-0">Founder/ Physiotherapist</p>
                             </div>
                             <div class="team-social bg-dark text-center">
                                 <a class="btn btn-outline-primary btn-square" href="https://www.instagram.com/massagealchemy_?igsh=aTYxb3dua2RscHgx&utm_source=qr"><i class="fab fa-instagram"></i></a>
